# BSplineFitting

./: LICENSE  README.md
SplineFitting/: CMakeLists.txt  drawResult.m  main.cpp  read_write_asc.cpp  read_write_asc.h
SplineFitting/.svn/: all-wcprops  entries
SplineFitting/.svn/text-base/: build.bat.svn-base  main.cpp.svn-base  main.pro.svn-base
SplineFitting/core/: cubic_b_spline.cpp  cubic_b_spline.h  spline_curve_fitting.cpp  spline_curve_fitting.h
SplineFitting/core/.svn/: all-wcprops  entries
SplineFitting/core/.svn/text-base/: cubic_b_spline_curve.cpp.svn-base  cubic_b_spline_curve.h.svn-base  spline_curve_fitting.cpp.svn-base  spline_curve_fitting.h.svn-base  vector2.cpp.svn-base  vector2.h.svn-base
test_data/: 01.txt  01.txt_controls.txt  01.txt_spline.txt  02.txt  02.txt_controls.txt  02.txt_spline.txt  03.txt  03.txt_controls.txt  03.txt_spline.txt
